--- a/paginas/explorar.css
+++ b/paginas/explorar.css
@@ -63,6 +63,7 @@ body {
 .nav-item.active .dropdown {
     display: block;
 }
+
 /* barra de arriba donde se tienen los elementos */
 .up-bar {
     display: flex;
@@ -88,33 +89,33 @@ body {
     outline: none;
 }
 
-.cuenta{
-    
+.cuenta {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 20px;
     gap: 10px;
-    
 }
-.cuenta img{
+
+.cuenta img {
     border-radius: 50%;
 }
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
     gap: 16px;
     margin-top: 20px;
     padding-left: 100px;
 }
 
 .imagen {
-    border-radius: 20px;
-    width: 230px;
+    width: 100%;
     height: auto;
+    border-radius: 20px;
 }
-.up{
+
+.up {
     display: flex;
     justify-content: space-between;
     align-items: center;
